# rt-gui

./: CMakeLists.txt  README.md  launch_obeca_gui.sh  obeca-gui.css  obeca-gui.desktop  obeca-gui.py
debian/: postinst
