cmake_minimum_required(VERSION 3.19)

project (obeca-gui VERSION 1.0.0)

install(FILES launch_obeca_gui.sh 
  DESTINATION /usr/bin/
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
  )
install(FILES obeca-gui.svg 
  DESTINATION /usr/share/icons/hicolor/scalable/apps/
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ 
  )
install(FILES obeca-gui.desktop 
  DESTINATION /usr/share/applications/
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
  )
install(FILES obeca-gui.css 
  DESTINATION /usr/share/obeca/
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ 
  )
install(FILES obeca-gui.py 
  DESTINATION /usr/share/obeca/
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ 
  )

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "KK") #required
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/debian/postinst;")

INCLUDE(CPack)
